aws-sdk-compile-checks-usage/tests/fails/missing_queue_url_in_send_message.stderr
error: method `send_message` is missing required argument(s): `queue_url`
  --> tests/fails/missing_queue_url_in_send_message.rs:10:16
   |
10 |     sqs_client.send_message()
   |                ^^^^^^^^^^^^
